# cache_manager

./: Cargo.toml  README.md  build.rs  tauri.conf.json
.cargo/: config.toml
src/: main.rs
ui/: index.html
