[package]
name = "cache_manager"
version = "1.0.0"
edition = "2021"
authors = ["Cache Manager Team"]
description = "Automatic Cache Cleaner for Windows"

[dependencies]
eframe = { version = "0.24", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"

# Tối ưu hóa cho release build
[profile.release]
opt-level = "z"         # Tối ưu kích thước file
lto = true              # Link Time Optimization
codegen-units = 1       # Tối ưu hóa cross-crate
strip = true            # Loại bỏ debug symbols
panic = "abort"         # Giảm kích thước binary

# Cấu hình binary
[[bin]]
name = "cache_manager"
path = "src/main.rs"