[package]
name = "memory-cache-manager"
version = "1.0.0"
edition = "2021"
authors = ["Memory Cache Manager Team"]
description = "Advanced Memory Cache Cleaner for Windows"

[[bin]]
name = "memory-cache-manager"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_System_Memory",
    "Win32_System_SystemInformation",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_Foundation"
]}

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"